Transition/animation tweaks; fix for swiper bullets not showing in build

--- a/components/paragraph/ParagraphHighlightedSpeakers/ParagraphHighlightedSpeakers.module.scss
+++ b/components/paragraph/ParagraphHighlightedSpeakers/ParagraphHighlightedSpeakers.module.scss
@@ -74,6 +74,7 @@
       .speaker {
         max-width: rem(414px);
         padding-top: rem(250px);
+        align-self: center;
       }
     }
 
